--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $black: #232323;
-$background: #ffdf8c;
-$gray-line: #f6f6f6;
-$orange: #fe5f1e;
+$background: #780fc9;
+$gray-line: #a01414;
+$orange: #b18905;
 
 $container-width: 90%;
 
